force-app/main/default/objects/Purchase_Order_Line__c/Purchase_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Linea de Orden de Compra</label>
    <nameField>
        <displayFormat>LOC-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineas de Orden de Compra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>