force-app/main/default/objects/Purchase_Order_Line__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <formula>Quote_Line__r.Delivery_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de Entrega</label>
    <type>Text</type>
</CustomField>