force-app/main/default/objects/Purchase_Order_Line__c/fields/Dispatch_Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Pending_Quantity__c</fullName>
    <label>Cantidad Pendiente de Despacho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>