force-app/main/default/objects/Purchase_Order_Line__c/fields/Dispatched_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Quantity__c</fullName>
    <label>Cantidad Despachada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>