force-app/main/default/objects/Purchase_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Quote_Line__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código del Producto</label>
    <type>Text</type>
</CustomField>