force-app/main/default/objects/Purchase_Order_Line__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <formula>Quote_Line__r.Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de Producto</label>
    <type>Text</type>
</CustomField>