force-app/main/default/objects/Purchase_Order_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Quote_Line__r.Product__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción del Producto</label>
    <type>Text</type>
</CustomField>