force-app/main/default/objects/Purchase_Order_Line__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Orden de Compra</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Lineas de Ordern de Compra</relationshipLabel>
    <relationshipName>Purchas_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>