force-app/main/default/objects/Purchase_Order_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>Quote_Line__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad Solicitada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>