force-app/main/default/objects/Purchase_Order_Line__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Linea de Cotización</label>
    <referenceTo>Quote_Line__c</referenceTo>
    <relationshipLabel>Lineas de Orden de Compra</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>